--- a/style.css
+++ b/style.css
@@ -13,30 +13,33 @@ body {
 }
 
 .card {
-    counter-increment: card-number;
+    counter-increment: card_number;
 }
 
 .card_number::before {
     font-weight: bold;
     font-size: 30px;
-    content: counter(card-number);
+    content: counter(card_number);
 }
 
 .card{
     width: 150px;
     height: 150px;
     padding: 10px;
-    margin:10px;
+    margin: 10px;
 
 }
-.card::nth-child(1) {
-    background: yellow;
+.card:nth-child(1) {
+    background: yellow !important;
 }
-.card::nth-child(2) {
+.card:nth-child(2) {
     background: red;
 }
-.card::nth-child(3) {
+.card:nth-child(3) {
     background: green;
+}
+.card:nth-child(4) {
+    background: violet;
 }
 /* #container { width:100%; display: flex; flex-direction: row;}
 main { width: 70%; height:auto; background:rgb(39, 172, 39);}
