--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     counter-reset:0;
 
 }
+main { display: flex; }
 
 .card {
     counter-increment: card_number;
@@ -45,7 +46,7 @@ body {
     background: blue;
 }
 /* #container { width:100%; display: flex; flex-direction: row;}
-main { width: 70%; height:auto; background:rgb(39, 172, 39);}
+main { display: flex;}
 aside { width: 30%; height:auto; background:blue;}
 footer {width: 100%; height:auto; } */
 
